k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: file-sharing-app
spec:
  hostnames:
    - file-sharing-app.localhost
  parentRefs:
    - name: edcv-gateway
      namespace: edc-v
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: file-sharing-app
          port: 8080
